chore: add logger

--- a/candy-guard/js/package.json
+++ b/candy-guard/js/package.json
@@ -47,7 +47,8 @@
     "@metaplex-foundation/beet-solana": "^0.3.0",
     "@metaplex-foundation/cusper": "^0.0.2",
     "@metaplex-foundation/mpl-core": "^0.6.1",
-    "@solana/spl-token": "^0.2.0"
+    "@solana/spl-token": "^0.2.0",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.11.1",
