--- a/.github/workflows/sdk-fixed-price-sale.yml
+++ b/.github/workflows/sdk-fixed-price-sale.yml
@@ -12,7 +12,6 @@ jobs:
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
-      package: ${{ steps.filter.outputs.package }}
     steps:
       - uses: actions/checkout@v2
       # For pull requests it's not necessary to checkout the code
@@ -22,12 +21,10 @@ jobs:
           filters: |
             core:
               - 'core/**'
-            package:
-              - 'fixed-price-sale/**'
 
   build-lint-and-test-fixed-price-sale:
     needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+    if: ${{ needs.changes.outputs.core == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
