--- a/.github/workflows/program-auction-house-execute-sale.yml
+++ b/.github/workflows/program-auction-house-execute-sale.yml
@@ -1,10 +1,6 @@
-name: Program Token Metadata
+name: Program Auction House
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push]
 
 env:
   CARGO_TERM_COLOR: always
@@ -12,30 +8,10 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    # Set job outputs to values from filter step
-    outputs:
-      core: ${{ steps.filter.outputs.core }}
-      package: ${{ steps.filter.outputs.package }}
-    steps:
-      - uses: actions/checkout@v2
-      # For pull requests it's not necessary to checkout the code
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            core:
-              - 'core/**'
-            package:
-              - 'token-metadata/**'
-
-  build-and-test-token-metadata:
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+  build-and-test-auction-house-execute-sale:
     runs-on: ubuntu-latest
     env:
-      cache_id: program-token-metadata
+      cache_id: program-auction-house
 
     steps:
       # Setup Deps
@@ -64,16 +40,16 @@ jobs:
       # Run lint checks
       - uses: ./.github/actions/verify-rust
         with:
-          working-directory: ./token-metadata/program
+          working-directory: ./auction-house/program
 
       # Build deps
       - uses: ./.github/actions/build-token-vault
 
       # Run test
-      - name: test-token-metadata-program
+      - name: test-auction-house-program
         id: run_test
-        working-directory: ./token-metadata/program
+        working-directory: ./auction-house/program
         run: |
           cargo +${{ env.RUST_TOOLCHAIN }} test -- --nocapture --test-threads 1
           cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --version
-          cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --bpf-out-dir ../../target/deploy/ -- --nocapture --test-threads 1
+          cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --bpf-out-dir ../../target/deploy/ --test execute_sale -- --nocapture --test-threads 1
