--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -24,10 +24,11 @@ default = []
 solana-program = "~1.9.28"
 anchor-lang = "~0.24.2"
 anchor-spl = "~0.24.2"
-spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
-spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
-mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
-metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
+spl-token = { version = "~3.2", features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "~1.0.3", features = [
+  "no-entrypoint",
+] }
+mpl-token-metadata = { version = "~1.2.7", features = ["no-entrypoint"] }
 thiserror = "~1.0"
 arrayref = "~0.3.6"
 
@@ -36,10 +37,10 @@ anchor-client = "~0.24.2"
 shellexpand = "~2.1.0"
 serde_json = "~1.0"
 solana-program = "~1.9.28"
-mpl-testing-utils= {path="../../core/rust/testing-utils" }
+mpl-testing-utils = { path = "../../core/rust/testing-utils" }
 solana-program-test = "~1.9.28"
 solana-sdk = "~1.9.28"
-env_logger="~0.9.0"
+env_logger = "~0.9.0"
 
 [profile.release]
-overflow-checks = true     # Enable integer overflow checks.
+overflow-checks = true # Enable integer overflow checks.
