--- a/bubblegum/program/Cargo.toml
+++ b/bubblegum/program/Cargo.toml
@@ -17,12 +17,18 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.25.0" }
+bytemuck = "1.8.0"
+solana-program = "1.10.29"
 spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
 mpl-token-metadata = { version = "1.3.6", features = ["no-entrypoint"] }
-spl-compression = { git = "https://github.com/solana-labs/solana-program-library", rev = "7c7507f4ec1f320bbc33af459d4d8b5573a6a906", features = ["cpi"] }
-bytemuck = "1.8.0"
-solana-program = "1.10.29"
+spl-compression = { git = "https://github.com/solana-labs/solana-program-library", rev = "668dcac", features = ["cpi"] }
+
+[dev-dependencies]
+solana-program-test = "1.10.29"
+solana-sdk = "1.10.29"
+spl-concurrent-merkle-tree = { git = "https://github.com/solana-labs/solana-program-library", rev = "668dcac" }
+wrapper = { git = "https://github.com/solana-labs/solana-program-library", rev = "668dcac", features = ["cpi"] }
 
 [profile.release]
 overflow-checks = true
