simplify regex check for modified lib files

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -44,7 +44,7 @@ jobs:
           script: |
             const files = ${{ steps.list-changed-files.outputs.changed-files }}
             // yarn doc flow only generates docs for JS
-            const regexp = /[a-zA-Z\-]+\/(js)/g
+            const regexp = /*.ts/g
             const uniqueFilesObj = files
               .filter(f => regexp.test(f))
               .reduce((p, file) => {
