--- a/candy-guard/js/package.json
+++ b/candy-guard/js/package.json
@@ -46,7 +46,11 @@
     "@metaplex-foundation/beet": "^0.4.0",
     "@metaplex-foundation/beet-solana": "^0.3.0",
     "@metaplex-foundation/cusper": "^0.0.2",
+    "@metaplex-foundation/js": "^0.15.0",
+    "@metaplex-foundation/mpl-auction-house": "^2.3.0",
+    "@metaplex-foundation/mpl-candy-machine": "^4.6.0",
     "@metaplex-foundation/mpl-core": "^0.6.1",
+    "@metaplex-foundation/mpl-token-metadata": "^2.2.4",
     "@solana/spl-token": "^0.2.0",
     "debug": "^4.3.4"
   },
