--- a/listing-rewards/js/package.json
+++ b/listing-rewards/js/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@holaplex/mpl-listing-rewards",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "MPL Auction House JavaScript API.",
-  "main": "dist/src/listing-rewards.js",
-  "types": "dist/src/listing-rewards.d.ts",
+  "main": "dist/src/generated/index.js",
+  "types": "dist/src/generated/index.d.ts",
   "scripts": {
-    "check:publish-ready": "yarn build && yarn test",
+    "check:publish-ready": "yarn build",
     "preversion": "yarn check:publish-ready",
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
