--- a/hydra/js/package.json
+++ b/hydra/js/package.json
@@ -13,7 +13,7 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "pretest": "yarn build && yarn amman:start",
-    "test": "ts-mocha -p ./tsconfig.json -t 1000000 \"test/*.ts\"",
+    "test": "ts-mocha -p ./tsconfig.json -t 100000000 \"test/*.ts\"",
     "posttest": "yarn build && yarn amman:stop",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "amman:start": "DEBUG='amman:(info|error)' amman start",
@@ -45,11 +45,11 @@
     "@metaplex-foundation/beet": "^0.1.0",
     "@metaplex-foundation/beet-solana": "^0.1.1",
     "@metaplex-foundation/cusper": "^0.0.2",
-    "@metaplex-foundation/mpl-token-metadata": "^1.2.5",
-    "@project-serum/anchor": "0.25.0",
+    "@metaplex-foundation/mpl-token-metadata": "~2.0",
+    "@project-serum/anchor": "0.24.2",
     "@project-serum/common": "0.0.1-beta.3",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.31.0",
+    "@solana/web3.js": "^1.50.1",
     "@strata-foundation/spl-utils": "^3.10.3",
     "bn.js": "^5.2.0",
     "debug": "^4.3.3"
