remove .crates from .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 .DS_Store
 **/.DS_Store
 .anchor/
-.crates/
+#.crates/
 
 node_modules/
 **/*.rs.bk
@@ -19,7 +19,6 @@ yarn-error.log*
 .vscode
 .idea
 .anchor
-.crates/
 
 .pnp.*
 .yarn/*
