chore: rename all instances of listing_rewards to reward_center in sdk

--- a/listing-rewards/sdk/Cargo.toml
+++ b/listing-rewards/sdk/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "mpl-listing-rewards-sdk"
+name = "mpl-reward-center-sdk"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mpl-listing-rewards = { path = "./../program", features = ["no-entrypoint"]}
+mpl-reward-center = { path = "./../program", features = ["no-entrypoint"]}
 mpl-auction-house = { path = "./../../auction-house/program", features = ["no-entrypoint"]}
 anchor-lang = "~0.24.2"
 anchor-client = "~0.24.2"
