Add candy core program

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
 [workspace]
 members=[
-  "token-entangler/program",
-  "nft-packs/program",
-  "fixed-price-sale/program"
+  "candy-core/program"
 ]
 exclude = [
   "fixed-price-sale/cli",
@@ -12,4 +10,7 @@ exclude = [
   "candy-machine/program",
   "bubblegum/program",
   "candy-wrapper/program",
+  "token-entangler/program",
+  "nft-packs/program",
+  "fixed-price-sale/program"
 ]
