extract state to separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ exclude = [
   "auction-house/program",
   "hydra/program",
   "candy-machine/program",
+  "candy-machine/state",
   "bubblegum/program",
   "candy-wrapper/program",
 ]
