--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -24,6 +24,7 @@ anchor-lang = "0.24.2"
 arrayref = "0.3.6"
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
 mpl-token-metadata = { version = "1.3.4", features = ["no-entrypoint"] }
+mpl-candy-machine-state = { path = "../state"}
 spl-associated-token-account = { version = "1.0.3", features = [
   "no-entrypoint",
 ] }
