feat: publish npm package and cargo crate under new program name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ exclude = [
   "auction-house/program",
   "auction-house/sdk",
   "candy-machine/program",
-  "listing-rewards/program",
-  "listing-rewards/sdk",
+  "reward-center/program",
+  "reward-center/sdk",
   "bubblegum/program",
   "candy-wrapper/program"
 ]
