--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
-members=[
+members = [
   "token-entangler/program",
   "nft-packs/program",
-  "fixed-price-sale/program"
+  "fixed-price-sale/program",
 ]
 exclude = [
   "fixed-price-sale/cli",
@@ -12,4 +12,5 @@ exclude = [
   "candy-machine/program",
   "bubblegum/program",
   "candy-wrapper/program",
+  "trifle/program",
 ]
