--- a/trifle/program/Cargo.toml
+++ b/trifle/program/Cargo.toml
@@ -13,6 +13,9 @@ shank = "0.0.9"
 solana-program = "1.14.1"
 spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
 thiserror = "1.0.35"
+mpl-token-metadata = { version = "1.4.0", features = ["no-entrypoint"] }
+num-derive = "0.3.3"
+num-traits = "0.2.14"
 
 [dev-dependencies]
 solana-sdk = "1.14.1"
