Switching to legacy test style.

--- a/trifle/program/Cargo.toml
+++ b/trifle/program/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "mpl_trifle"
 version = "0.1.0"
+description = "Metaplex Composability Program"
+authors = ["Metaplex Developers <dev@metaplex.com>"]
+repository = "https://github.com/metaplex-foundation/metaplex-program-library"
+license = "AGPL-3.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "mpl_trifle"
 
 [features]
 no-entrypoint = []
@@ -14,7 +17,7 @@ test-bpf = []
 [dependencies]
 borsh = "0.9.3"
 shank = "0.0.9"
-solana-program = "1.14.1"
+solana-program = "1.10.40"
 spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
 thiserror = "1.0.35"
 # mpl-token-metadata = { version = "1.4.0", features = ["no-entrypoint"] }
@@ -25,8 +28,5 @@ num-derive = "0.3.3"
 num-traits = "0.2.14"
 
 [dev-dependencies]
-solana-program = "1.14.1"
-solana-sdk = "1.14.1"
-solana-program-test = "1.14.1"
-spl-token = "3.5.0"
-mpl-token-metadata = { path = "../../token-metadata/program" }
+solana-sdk = "1.10.40"
+solana-program-test = "1.11.5"
