--- a/.github/actions/install-linux-build-deps/action.yml
+++ b/.github/actions/install-linux-build-deps/action.yml
@@ -11,7 +11,7 @@ runs:
 
     - name: apt-get install clang 
       run: |
-        sudo apt-get install -y clang-10 --allow-unauthenticated
+        sudo apt-get install -y clang clang-10 --allow-unauthenticated
         clang-10 --version
       shell: bash
       
