--- a/.github/actions/install-linux-build-deps/action.yml
+++ b/.github/actions/install-linux-build-deps/action.yml
@@ -11,10 +11,8 @@ runs:
 
     - name: apt-get install clang 
       run: |
-        sudo apt-get install -y clang clang-10 --allow-unauthenticated
-        clang-10 --version
+        sudo apt-get install build-essentials
       shell: bash
-      
     - name: apt-get install ssl libs
       run: |
         sudo apt-get install -y openssl --allow-unauthenticated
