--- a/.github/actions/install-linux-build-deps/action.yml
+++ b/.github/actions/install-linux-build-deps/action.yml
@@ -15,3 +15,10 @@ runs:
         sudo apt-get install -y libssl-dev --allow-unauthenticated
         sudo apt-get install -y libssl1.1 --allow-unauthenticated
       shell: bash
+
+    - name: apt-get install libudev
+      run: |
+        sudo apt-get update
+        sudo apt-get upgrade
+        sudo apt-get install libudev-dev
+      shell: bash
