fixed-price-sale: add mpl-metaplex program to tests

--- a/.github/workflows/program-fixed-price-sale.yml
+++ b/.github/workflows/program-fixed-price-sale.yml
@@ -62,6 +62,12 @@ jobs:
 
       # Build deps
       - uses: ./.github/actions/build-token-metadata
+
+      # Get Metaplex program
+      - name: Get Metaplex program
+        run: |
+          solana program dump p1exdMJcjVao65QdewkaZRUnU6VPSXhus9n2GzWfh98 ../../test-programs/mpl_metaplex.so
+
       # Run test
       - name: test-fixed-price-sale-program
         id: run_test
