--- a/fixed-price-sale/program/Cargo.toml
+++ b/fixed-price-sale/program/Cargo.toml
@@ -30,3 +30,4 @@ solana-program = "~1.9.28"
 solana-sdk = "~1.9.28"
 spl-associated-token-account = "~1.0.3"
 mpl-testing-utils= {path="../../core/rust/testing-utils" }
+mpl-metaplex = "0.0.3"
