--- a/.github/workflows/program-fixed-price-sale.yml
+++ b/.github/workflows/program-fixed-price-sale.yml
@@ -66,7 +66,7 @@ jobs:
       # Get Metaplex program
       - name: Get Metaplex program
         run: |
-          solana program dump p1exdMJcjVao65QdewkaZRUnU6VPSXhus9n2GzWfh98 ../../test-programs/mpl_metaplex.so
+          solana program dump p1exdMJcjVao65QdewkaZRUnU6VPSXhus9n2GzWfh98 test-programs/mpl_metaplex.so
 
       # Run test
       - name: test-fixed-price-sale-program
