--- a/candy-machine-core/js/package.json
+++ b/candy-machine-core/js/package.json
@@ -53,6 +53,7 @@
     "@metaplex-foundation/amman": "^0.11.0",
     "@metaplex-foundation/js": "^0.15.0",
     "@metaplex-foundation/solita": "^0.12.0",
+    "@solana/spl-token": "0.3.5",
     "@types/bn.js": "^5.1.0",
     "esbuild": "^0.15.7",
     "eslint": "^8.3.0",
