--- a/.github/workflows/program-bubblegum.yml
+++ b/.github/workflows/program-bubblegum.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   setup-versions:
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     outputs:
       versions: ${{ steps.matrix.outputs.value }}
     steps:
@@ -32,7 +32,7 @@ jobs:
         shell: bash
 
   setup-tests:
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     outputs:
       tests: ${{ steps.matrix.outputs.value }}
     steps:
@@ -53,7 +53,7 @@ jobs:
         shell: bash
 
   changes:
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
@@ -73,7 +73,7 @@ jobs:
   build-and-test-bubblegum:
     needs: [changes, setup-versions, setup-tests]
     if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -117,6 +117,6 @@ jobs:
       - name: test-bubblegum-program
         id: run_bubblegum_test
         working-directory: ./bubblegum/program
-        run: |          
+        run: |
           cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --version
           cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --bpf-out-dir ../../test-programs/ --test ${{ env.TEST }} -- --nocapture
