--- a/.github/workflows/program-token-metadata.yml
+++ b/.github/workflows/program-token-metadata.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   setup-versions:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-8vcpu-ubuntu-2204
     outputs:
       versions: ${{ steps.matrix.outputs.value }}
     steps:
@@ -28,9 +28,9 @@ jobs:
           echo $VERSION_JSON && \
           echo "::set-output name=value::$VERSION_JSON"
         shell: bash
-  
+
   setup-tests:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-8vcpu-ubuntu-2204
     outputs:
       tests: ${{ steps.matrix.outputs.value }}
     steps:
@@ -51,7 +51,7 @@ jobs:
         shell: bash
 
   changes:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-8vcpu-ubuntu-2204
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
