--- a/.github/workflows/program-hydra.yml
+++ b/.github/workflows/program-hydra.yml
@@ -76,4 +76,4 @@ jobs:
       #   run: |
       #     cargo +${{ env.RUST_TOOLCHAIN }} test -- --nocapture
       #     cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --version
-      #     cargo +${{ env.RUST_TOOLCHAIN }} test-bpf -- --nocapture
+      #     cargo +${{ env.RUST_TOOLCHAIN }} test-bpf -- --nocapture --test-threads 1
