--- a/.github/workflows/sdk-candy-machine-core.yml
+++ b/.github/workflows/sdk-candy-machine-core.yml
@@ -25,7 +25,7 @@ jobs:
           package:
             - 'candy-machine-core/js/**'
 
-  build-lint-and-test-candy-machine:
+  build-lint-and-test-candy-machine-core:
     needs: changes
     if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
     runs-on: ubuntu-latest
@@ -36,3 +36,6 @@ jobs:
         with: 
           cache_id: sdk-candy-machine-core
           working_dir: ./candy-machine-core/js
+          build_token_metadata: true
+          build_auction_house: true
+          build_candy_machine: true
