Skip test during SDK build

--- a/.github/workflows/sdk-candy-machine-core.yml
+++ b/.github/workflows/sdk-candy-machine-core.yml
@@ -36,6 +36,7 @@ jobs:
         with: 
           cache_id: sdk-candy-machine-core
           working_dir: ./candy-machine-core/js
+          skip_test: true
           build_token_metadata: true
           build_auction_house: true
           build_candy_machine: true
