--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -43,6 +43,7 @@
     "@metaplex-foundation/beet": "^0.6.1",
     "@metaplex-foundation/beet-solana": "^0.3.1",
     "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/spl-token": "^0.3.5",
     "@solana/web3.js": "^1.56.2",
     "bn.js": "^5.2.0"
   },
