--- a/auctioneer/js/package.json
+++ b/auctioneer/js/package.json
@@ -42,6 +42,7 @@
     "@metaplex-foundation/beet": "^0.1.0",
     "@metaplex-foundation/beet-solana": "^0.1.1",
     "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/spl-token": "^0.3.5",
     "@solana/web3.js": "^1.35.1",
     "bn.js": "^5.2.0"
   },
