--- a/gumdrop/js/package.json
+++ b/gumdrop/js/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "@metaplex-foundation/beet": "^0.1.0",
     "@metaplex-foundation/beet-solana": "^0.1.1",
+    "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/spl-token": "^0.3.5",
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
