--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -62,6 +62,8 @@
     "tape": "^5.5.2",
     "ts-mocha": "^10.0.0",
     "typedoc": "^0.23.10",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
