--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -58,6 +58,8 @@
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
