--- a/gumdrop/js/package.json
+++ b/gumdrop/js/package.json
@@ -51,6 +51,8 @@
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
