--- a/hydra/js/package.json
+++ b/hydra/js/package.json
@@ -72,6 +72,8 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
     "ts-mocha": "9.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
