--- a/nft-packs/js/package.json
+++ b/nft-packs/js/package.json
@@ -47,6 +47,8 @@
     "@metaplex-foundation/solita": "^0.13.0",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
