--- a/token-entangler/js/package.json
+++ b/token-entangler/js/package.json
@@ -49,6 +49,8 @@
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
