--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -51,12 +51,13 @@
     "@metaplex-foundation/solita": "^0.15.2",
     "@types/tape": "^4.13.2",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin": "^1.0.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "typescript": "^4.6.2"
   }
 }
