--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -64,6 +64,7 @@
     "typedoc": "^0.23.10",
     "typescript": "^4.3.5",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin": "^1.0.1"
   }
 }
