--- a/core/js/package.json
+++ b/core/js/package.json
@@ -47,6 +47,7 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.6.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin": "^1.0.1"
   }
 }
