--- a/gumdrop/js/package.json
+++ b/gumdrop/js/package.json
@@ -53,6 +53,7 @@
     "tape": "^5.5.2",
     "typescript": "^4.6.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin": "^1.0.1"
   }
 }
