--- a/hydra/js/package.json
+++ b/hydra/js/package.json
@@ -74,6 +74,7 @@
     "ts-mocha": "9.0.2",
     "typescript": "^4.6.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin": "^1.0.1"
   }
 }
