--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -50,10 +50,12 @@
   "devDependencies": {
     "@metaplex-foundation/solita": "^0.15.2",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin": "^1.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
