--- a/hydra/js/package.json
+++ b/hydra/js/package.json
@@ -63,18 +63,20 @@
     "@types/debug": "^4.1.7",
     "@types/mocha": "^9.1.0",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "9.2.2",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
     "ts-mocha": "9.0.2",
-    "typescript": "^4.6.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin": "^1.0.1"
+    "typescript": "^4.6.2"
   }
 }
