--- a/token-entangler/js/package.json
+++ b/token-entangler/js/package.json
@@ -46,12 +46,14 @@
   "devDependencies": {
     "@metaplex-foundation/solita": "^0.5.0",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "rimraf": "^3.0.2",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin": "^1.0.1"
+    "typescript": "^4.6.2"
   }
 }
