--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -52,15 +52,17 @@
     "@types/bn.js": "^5.1.0",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "cpr": "^3.0.1",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "supports-color": "^9.2.1",
     "tape": "^5.5.3",
-    "typescript": "^4.6.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin": "^1.0.1"
+    "typescript": "^4.6.2"
   }
 }
