--- a/.github/workflows/integration-candy-machine-core.yml
+++ b/.github/workflows/integration-candy-machine-core.yml
@@ -73,7 +73,18 @@ jobs:
           build_auction_house: true
           build_candy_machine: true
 
-      # Run integration test
+      # Start local validator
       - name: start-local-test-validator
         working-directory: ./candy-machine-core/js
-        run: yarn run api:gen && yarn run build && DEBUG=amman* yarn amman:start && DEBUG=mpl* yarn test && yarn run amman:stop
+        run: DEBUG=amman* yarn amman:start
+      
+      # Run integration test
+      - name: run-integration-test
+        id: run_integration_test
+        working-directory: ./candy-machine-core/js
+        run: DEBUG=mpl* yarn test
+
+      # Stop local validator
+      - name: stop-local-test-validator
+        working-directory: ./candy-machine-core/js
+        run: yarn amman:stop
