Change output directory

--- a/.github/actions/build-candy-machine-core/action.yml
+++ b/.github/actions/build-candy-machine-core/action.yml
@@ -12,5 +12,5 @@ runs:
       working-directory: ./candy-machine-core/program
       run: |
         cargo +${{ env.RUST_STABLE }} build-bpf --version
-        cargo +${{ env.RUST_STABLE }} build-bpf --bpf-out-dir ../../target/deploy/
+        cargo +${{ env.RUST_STABLE }} build-bpf --bpf-out-dir ../../test-programs/
       shell: bash
