--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -48,6 +48,8 @@
     "debug": "^4.3.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@metaplex-foundation/solita": "^0.12.1",
     "@types/bn.js": "^5.1.0",
     "@types/debug": "^4.1.7",
