--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -50,6 +50,8 @@
     "typescript-collections": "^1.3.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/tape": "^4.13.2",
