--- a/core/js/package.json
+++ b/core/js/package.json
@@ -41,6 +41,8 @@
     "bs58": "^4.0.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@types/bn.js": "^5.1.1",
     "@types/bs58": "^4.0.1",
     "eslint": "^8.3.0",
