chore: add prettier deps

--- a/auctioneer/js/package.json
+++ b/auctioneer/js/package.json
@@ -47,6 +47,8 @@
     "bn.js": "^5.2.0"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
