--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -48,8 +48,9 @@
     "bn.js": "^5.2.0"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@metaplex-foundation/solita": "^0.15.2",
-    "@solana/spl-token": "0.3.5",
     "@types/tape": "^4.13.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
