--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -52,6 +52,8 @@
     "typescript-collections": "^1.3.3"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@types/chai": "^4.3.0",
