--- a/core/js/package.json
+++ b/core/js/package.json
@@ -41,6 +41,8 @@
     "bs58": "^4.0.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@types/bn.js": "^5.1.1",
