--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -46,6 +46,8 @@
     "@solana/web3.js": "^1.56.2"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@metaplex-foundation/amman": "^0.1.0",
