--- a/hydra/js/package.json
+++ b/hydra/js/package.json
@@ -55,6 +55,8 @@
     "debug": "^4.3.3"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@metaplex-foundation/amman": "^0.10.0",
