--- a/nft-packs/js/package.json
+++ b/nft-packs/js/package.json
@@ -45,6 +45,8 @@
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@metaplex-foundation/solita": "^0.13.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
