--- a/token-entangler/js/package.json
+++ b/token-entangler/js/package.json
@@ -44,6 +44,8 @@
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@metaplex-foundation/solita": "^0.5.0",
     "@types/tape": "^4.13.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
