--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -48,6 +48,8 @@
     "debug": "^4.3.3"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@metaplex-foundation/solita": "^0.12.1",
