--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   integration-tests:
-    name: "Integration Test: ${{ matrix.node.name }}"
+    name: "Integration: ${{ matrix.node.name }}"
     strategy:
       fail-fast: false
       matrix:
